--- a/src/styles/scss-common-partials/_variables.scss
+++ b/src/styles/scss-common-partials/_variables.scss
@@ -28,6 +28,9 @@ $grey-1: rgb(92, 92, 92);
 $grey-2: rgb(206, 212, 218);
 $grey-3: rgb(119, 119, 119);
 $grey-4: rgb(102, 102, 102);
+$grey-5: rgb(128, 128, 128);
+$grey-6: rgb(211, 211, 211);
+$grey-6a: rgba(211, 211, 211, 0.5);
 $black-1: rgb(0, 0, 0);
 $black-2: rgb(33, 37, 41);
 $black-2a: rgba(33, 37, 41, 0.7);
