--- a/src/styles/scss-non-critical/sections/reservation-form/_index.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_index.scss
@@ -5,7 +5,7 @@
 @use './form-textarea' as *;
 @use './form-paragraph' as *;
 @use './form-button' as *;
-@use './form-message' as *;
+@use './form-confirmation-message' as *;
 
 
 
@@ -17,4 +17,4 @@
 @forward '../reservation-form/form-textarea';
 @forward '../reservation-form/form-paragraph';
 @forward '../reservation-form/form-button';
-@forward '../reservation-form/form-message';
+@forward '../reservation-form/form-confirmation-message';
