--- a/src/styles/scss-critical/layouts/_menus.scss
+++ b/src/styles/scss-critical/layouts/_menus.scss
@@ -4,7 +4,7 @@
 
 
 // for whole page vertical alignment
-.small-menu {
+.accordion {
     max-width: 100%;
     margin-inline: auto;
 
@@ -13,7 +13,7 @@
     }
 }
 
-.large-menu {
+.menu {
     max-width: f.rem($mw-xs);
     margin-inline: auto;
 
