--- a/src/styles/scss-critical/sections/menus/_index.scss
+++ b/src/styles/scss-critical/sections/menus/_index.scss
@@ -1,14 +1,14 @@
 @use './menu-structure' as *;
 @use './menu-heading' as *;
-@use './sm-menu-accordions' as *;
-@use './lg-menu-tabs' as *;
-@use './lg-menu-contents' as *;
+@use './menu-accordions' as *;
+@use './menu-tabs' as *;
+@use './menu-panels' as *;
 
 
 
 
 @forward '../menus/menu-structure';
 @forward '../menus/menu-heading';
-@forward '../menus/sm-menu-accordions';
-@forward '../menus/lg-menu-tabs';
-@forward '../menus/lg-menu-contents';
+@forward '../menus/menu-accordions';
+@forward '../menus/menu-tabs';
+@forward '../menus/menu-panels';
