--- a/src/styles/scss-critical/critical-style.css
+++ b/src/styles/scss-critical/critical-style.css
@@ -530,17 +530,17 @@ hr {
   border: 1px solid rgb(255, 231, 204);
 }
 
-.large-menu__tab {
+.menu__tab {
   border: 1px solid rgb(255, 231, 204);
   background-color: rgba(255, 251, 235, 0.7);
 }
 
-.large-menu__tab:hover {
+.menu__tab:hover {
   background-color: rgb(248, 203, 166);
   font-weight: bold;
 }
 
-.large-menu__tab--active {
+.menu__tab--active {
   border: 1px solid rgb(255, 231, 204);
   background-color: rgb(248, 203, 166);
 }
@@ -550,17 +550,17 @@ hr {
   background-color: rgb(255, 255, 255);
 }
 
-.large-menu__tab__item {
+.menu__tab__item {
   border-bottom: 1px solid rgb(255, 231, 204);
 }
 
 @media all and (min-width: 48em) {
-  .large-menu__tab__item {
+  .menu__tab__item {
     border-right: 1px solid rgb(255, 231, 204);
   }
 }
 
-.large-menu__tab__item-price {
+.menu__tab__item-price {
   background-color: rgba(186, 90, 12, 0.75);
   color: rgb(255, 255, 255);
 }
@@ -570,7 +570,7 @@ body {
   font-size: clamp(1.25rem, 0.9rem + 1vw, 1.5rem);
 }
 
-.g-logofont {
+.logofont {
   font-family: "Dancing Script", cursive;
   font-size: clamp(2rem, 1.5rem + 1vw, 2.5rem);
 }
@@ -613,7 +613,7 @@ body {
   font-weight: bold;
 }
 
-.large-menu__tab {
+.menu__tab {
   font-size: clamp(1.35rem, 1.2rem + 1vw, 2rem);
 }
 
@@ -622,17 +622,17 @@ body {
   font-weight: bold;
 }
 
-.large-menu__tab__item p {
+.menu__tab__item p {
   font-size: clamp(1.3rem, 0.9rem + 1vw, 1.5rem);
 }
 
-.large-menu__tab__item-price {
+.menu__tab__item-price {
   font-size: clamp(1.2rem, 1rem + 1vw, 1.4rem);
   font-weight: 700;
   line-height: 0.75rem;
 }
 
-.large-menu__image-description {
+.menu__image-description {
   font-size: clamp(1.3rem, 0.9rem + 1vw, 1.5rem);
   text-shadow: 1px 1px rgb(255, 239, 213);
 }
@@ -961,12 +961,12 @@ section:not(:first-of-type) {
   }
 }
 
-.small-menu__carousel {
+.carousel {
   display: block;
 }
 
 @media all and (min-width: 48em) {
-  .small-menu__carousel {
+  .carousel {
     display: none;
   }
 }
@@ -978,7 +978,7 @@ section:not(:first-of-type) {
 @media all and (min-width: 28.125em) {
 
   /* hide the small menu, show the large menu */
-  .large-menu__tab__item:nth-of-type(3) {
+  .menu__tab__item:nth-of-type(3) {
     border-bottom: 0;
   }
 
@@ -991,7 +991,7 @@ section:not(:first-of-type) {
   }
 
   /* rounded border menu on wider screen */
-  .large-menu__tab {
+  .menu__tab {
     border-radius: 25px 25px 0 0;
   }
 
@@ -1109,13 +1109,13 @@ section:not(:first-of-type) {
   justify-self: end;
 }
 
-.large-menu__tabs {
+.menu__tabs {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
 }
 
-.large-menu__tab {
+.menu__tab {
   flex: 1 0 33.33%;
   padding: 1rem;
   transition: 0.5s;
@@ -1124,7 +1124,7 @@ section:not(:first-of-type) {
   cursor: pointer;
 }
 
-.large-menu__tab--active {
+.menu__tab--active {
   transition: 0.5s;
 }
 
@@ -1146,19 +1146,19 @@ section:not(:first-of-type) {
   display: inline-block;
 }
 
-.large-menu__tab__item {
+.menu__tab__item {
   display: grid;
   align-content: center;
   min-height: 7.8125rem;
 }
 
-.large-menu__tab__item p {
+.menu__tab__item p {
   margin: 0;
   padding: 2%;
   padding-left: calc(0.5rem + 1vw);
 }
 
-.large-menu__tab__item-price {
+.menu__tab__item-price {
   display: inline-block;
   border-radius: 10px;
   width: 4.6875rem;
@@ -1169,11 +1169,11 @@ section:not(:first-of-type) {
 }
 
 /* menu photos */
-.large-menu__image>* {
+.menu__image>* {
   display: none;
 }
 
-.large-menu__image-description {
+.menu__image-description {
   margin-top: 0.65rem;
 }
 
@@ -1187,19 +1187,19 @@ section:not(:first-of-type) {
     row-gap: 0px;
   }
 
-  .large-menu__tab__item--1 {
+  .menu__tab__item--1 {
     grid-area: 1/1/2/2;
   }
 
-  .large-menu__tab__item--2 {
+  .menu__tab__item--2 {
     grid-area: 2/1/3/2;
   }
 
-  .large-menu__tab__item--3 {
+  .menu__tab__item--3 {
     grid-area: 3/1/4/2;
   }
 
-  .large-menu__image {
+  .menu__image {
     grid-area: 1/2/4/3;
     display: flex;
     flex-direction: column;
@@ -1208,11 +1208,11 @@ section:not(:first-of-type) {
     margin: 1.25rem;
   }
 
-  .large-menu__image img {
+  .menu__image img {
     max-width: 100%;
   }
 
-  .large-menu__image>* {
+  .menu__image>* {
     display: block;
   }
 }
