--- a/src/styles/scss-critical/sections/menus/_menu-accordions.scss
+++ b/src/styles/scss-critical/sections/menus/_menu-accordions.scss
@@ -1,7 +1,7 @@
 @use '../../../scss-common-partials/functions' as f;
 
 //buttons when the accordion panel is close
-.small-menu__accordion__button {
+.accordion__button {
     padding: 0.8rem;
     width: 100%;
     text-align: left;
@@ -21,22 +21,22 @@
     }
 }
 
-.small-menu__accordion__button:not(:first-of-type) {
+.accordion__button:not(:first-of-type) {
     margin-top: 1rem;
 }
 
 //buttons when the accordion panel is open
 // "minus" sign (-)
-.small-menu__accordion__button--active:after {
+.accordion__button--active:after {
     content: "\2212";
 }
 
-.small-menu__accordion__button h3 {
+.accordion__button h3 {
     display: inline;
 }
 
 /* Style the accordion panel. Note: hidden by default */
-.small-menu__accordion__panel {
+.accordion__panel {
     padding: 0 0.5rem;
     overflow: hidden;
     max-height: 0;
@@ -44,7 +44,7 @@
     transition: max-height 0.25s ease-out;
 }
 
-.small-menu__accordion__content {
+.accordion__content {
     display: grid;
     grid-template-columns: repeat(2, auto);
     grid-template-rows: repeat(3, auto);
@@ -53,30 +53,30 @@
     padding-block: 0.5rem;
 }
 
-.small-menu__item--1 {
+.accordion__item--1 {
     grid-area: 1 / 1 / 2 / 2;
 }
 
-.small-menu__item-price--1 {
+.accordion__item-price--1 {
     grid-area: 1 / 2 / 2 / 3;
 }
 
-.small-menu__item--2 {
+.accordion__item--2 {
     grid-area: 2 / 1 / 3 / 2;
 }
 
-.small-menu__item-price--2 {
+.accordion__item-price--2 {
     grid-area: 2 / 2 / 3 / 3;
 }
 
-.small-menu__item--3 {
+.accordion__item--3 {
     grid-area: 3 / 1 / 4 / 2;
 }
 
-.small-menu__item-price--3 {
+.accordion__item-price--3 {
     grid-area: 3 / 2 / 4 / 3;
 }
 
-.small-menu__item-price {
+.accordion__item-price {
     justify-self: end;
 }
