--- a/src/styles/scss-critical/sections/menus/_menu-panels.scss
+++ b/src/styles/scss-critical/sections/menus/_menu-panels.scss
@@ -2,7 +2,7 @@
 @use '../../../scss-common-partials/mixins' as *;
 
 /* menu content */
-.large-menu__panel {
+.menu__panel {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 1fr);
@@ -11,7 +11,7 @@
     border-top: 0px;
 }
 
-.large-menu__panel>* {
+.menu__panel>* {
     animation: fadeIn 2s;
 }
 
@@ -26,25 +26,25 @@
 }
 
 /* menu description */
-.large-menu__panel .large-menu__item-name {
+.menu__panel .menu__item-name {
     padding: 2%;
     padding-left: calc(0.5rem + 1vw);
     display: inline-block;
 }
 
-.large-menu__item {
+.menu__item {
     display: grid;
     align-content: center;
     min-height: f.rem(125);
 }
 
-.large-menu__item p {
+.menu__item p {
     margin: 0;
     padding: 2%;
     padding-left: calc(0.5rem + 1vw);
 }
 
-.large-menu__item-price {
+.menu__item-price {
     display: inline-block;
     border-radius: 10px;
     width: f.rem(75);
@@ -55,16 +55,16 @@
 }
 
 /* menu photos */
-.large-menu__image>* {
+.menu__image>* {
     display: none;
 }
 
-.large-menu__image-description {
+.menu__image-description {
     margin-top: 0.65rem;
 }
 
 @include min-mq(md) {
-    .large-menu__panel {
+    .menu__panel {
         display: grid;
         grid-template-columns: 7fr 5fr;
         grid-template-rows: repeat(3, 1fr);
@@ -72,19 +72,19 @@
         row-gap: 0px;
     }
 
-    .large-menu__item--1 {
+    .menu__item--1 {
         grid-area: 1 / 1 / 2 / 2;
     }
 
-    .large-menu__item--2 {
+    .menu__item--2 {
         grid-area: 2 / 1 / 3 / 2;
     }
 
-    .large-menu__item--3 {
+    .menu__item--3 {
         grid-area: 3 / 1 / 4 / 2;
     }
 
-    .large-menu__image {
+    .menu__image {
         grid-area: 1 / 2 / 4 / 3;
         display: flex;
         flex-direction: column;
@@ -93,17 +93,17 @@
         margin: 1.25rem;
     }
 
-    .large-menu__image img {
+    .menu__image img {
         max-width: 100%;
     }
 
-    .large-menu__image>* {
+    .menu__image>* {
         display: block;
     }
 }
 
 @include min-mq(lg) {
-    .large-menu__panel {
+    .menu__panel {
         grid-template-columns: 2fr 1fr;
     }
 }
