--- a/src/styles/scss-critical/sections/menus/_menu-tabs.scss
+++ b/src/styles/scss-critical/sections/menus/_menu-tabs.scss
@@ -1,12 +1,12 @@
 @use '../../../scss-common-partials/mixins' as *;
 
-.large-menu__tabs {
+.menu__tabs {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
 }
 
-.large-menu__tab {
+.menu__tab {
     flex: 1 0 33.33%;
     padding: 1rem;
     transition: 0.5s;
