--- a/src/styles/scss-non-critical/non-critical-style.css
+++ b/src/styles/scss-non-critical/non-critical-style.css
@@ -10,11 +10,11 @@
   color: rgb(229, 186, 115);
 }
 
-.small-menu__carousel-dot {
+.carousel__dot {
   background-color: rgb(255, 231, 204);
 }
 
-.small-menu__carousel-dot:hover,
+.carousel__dot:hover,
 .slideshow-dot--active {
   background-color: rgb(248, 203, 166);
 }
@@ -63,17 +63,17 @@ textarea:focus {
   color: rgb(255, 0, 0);
 }
 
-.reservation__form__submit-button {
+.reservation__submit-button {
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
   box-shadow: 1px 1px 1px rgb(102, 102, 102);
 }
 
-.reservation__form__submit-button:hover {
+.reservation__submit-button:hover {
   outline: 3px solid rgb(255, 165, 0);
 }
 
-.reservation__form__submit-button:focus {
+.reservation__submit-button:focus {
   outline: 3px solid rgb(255, 165, 0);
 }
 
@@ -113,7 +113,7 @@ select {
   font-family: inherit;
 }
 
-.reservation__form__submit-button {
+.reservation__submit-button {
   font-size: 1.25rem;
   font-family: inherit;
 }
@@ -259,7 +259,7 @@ section.findus {
 }
 
 /* Slideshow container */
-.small-menu__carousel__track-container {
+.carousel__track-container {
   position: relative;
   margin: auto;
   margin-top: 1.5625rem;
@@ -419,15 +419,15 @@ section.findus {
     grid-area: 3/1/4/2;
   }
 
-  .reservation__form__time {
+  .reservation__time {
     grid-area: 3/2/4/3;
   }
 
-  .reservation__form__optional-message {
+  .reservation__optional-message {
     grid-area: 4/1/5/3;
   }
 
-  .reservation__form__bottom-part {
+  .reservation__bottom-part {
     grid-area: 5/1/6/3;
   }
 }
@@ -445,15 +445,15 @@ section.findus {
     grid-area: 2/2/3/3;
   }
 
-  .reservation__form__time {
+  .reservation__time {
     grid-area: 2/3/3/4;
   }
 
-  .reservation__form__optional-message {
+  .reservation__optional-message {
     grid-area: 3/1/5/4;
   }
 
-  .reservation__form__bottom-part {
+  .reservation__bottom-part {
     grid-area: 5/1/6/4;
   }
 }
@@ -548,7 +548,7 @@ section.findus {
   }
 }
 
-.reservation__form__bottom-part p {
+.reservation__bottom-part p {
   margin-bottom: 1rem;
 }
 
@@ -556,7 +556,7 @@ section.findus {
   display: none;
 }
 
-.reservation__form__submit-button {
+.reservation__submit-button {
   padding: 0.625rem 1rem;
   border: none;
   border-radius: 10px;
@@ -564,25 +564,25 @@ section.findus {
   cursor: pointer;
 }
 
-.findus__logofont__container {
+.logofont__container {
   display: none;
 }
 
 @media all and (min-width: 62em) {
-  .findus__logofont__container {
+  .logofont__container {
     display: block;
     flex: 1 0 33.33%;
   }
 }
 
 @media all and (min-width: 78.125em) {
-  .findus__logofont__container {
+  .logofont__container {
     flex: 1 0 50%;
   }
 }
 
-.findus__contact__container,
-.findus__openhour__container {
+.contact__container,
+.openhour__container {
   flex: 1 0 100%;
   width: 100%;
   margin: 0.5rem auto;
@@ -592,64 +592,64 @@ section.findus {
 
 @media all and (min-width: 18.75em) {
 
-  .findus__contact__container,
-  .findus__openhour__container {
+  .contact__container,
+  .openhour__container {
     margin: 0 auto;
   }
 }
 
 @media all and (min-width: 36em) {
 
-  .findus__contact__container,
-  .findus__openhour__container {
+  .contact__container,
+  .openhour__container {
     flex: 1 0 47.5%;
   }
 }
 
 @media all and (min-width: 62em) {
 
-  .findus__contact__container,
-  .findus__openhour__container {
+  .contact__container,
+  .openhour__container {
     flex: 1 0 33.33%;
   }
 }
 
 @media all and (min-width: 78.125em) {
 
-  .findus__contact__container,
-  .findus__openhour__container {
+  .contact__container,
+  .openhour__container {
     flex: 1 0 25%;
   }
 }
 
 @media all and (min-width: 62em) {
-  .findus__contact__container {
+  .contact__container {
     justify-content: flex-start;
   }
 }
 
 @media all and (min-width: 18.75em) and (max-width: 35.99875em) {
-  .findus__openhour__container {
+  .openhour__container {
     padding-top: 2rem;
   }
 }
 
 @media all and (min-width: 62em) {
-  .findus__openhour__container {
+  .openhour__container {
     justify-content: flex-end;
   }
 }
 
-.findus__contact__content,
-.findus__openhour__content {
+.contact__content,
+.openhour__content {
   max-width: 16.875rem;
   width: 100%;
 }
 
 @media all and (min-width: 36em) {
 
-  .findus__contact__content,
-  .findus__openhour__content {
+  .contact__content,
+  .openhour__content {
     max-width: 20rem;
     width: 95%;
   }
@@ -662,12 +662,12 @@ section.findus {
   text-align: center;
 }
 
-.findus__contact__grid {
+.contact__grid {
   text-align: center;
 }
 
 @media all and (min-width: 18.75em) {
-  .findus__contact__grid {
+  .contact__grid {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(2, auto);
@@ -684,26 +684,26 @@ section.findus {
   padding-left: 3px;
 }
 
-.findus__openhour__small-grid {
+.openhour__small-grid {
   text-align: center;
 }
 
 @media all and (min-width: 18.75em) {
-  .findus__openhour__small-grid {
+  .openhour__small-grid {
     display: none;
   }
 }
 
-.findus__openhour__small-grid li:nth-of-type(even) {
+.openhour__small-grid li:nth-of-type(even) {
   margin-bottom: 0.4rem;
 }
 
-.findus__openhour__large-grid {
+.openhour__large-grid {
   display: none;
 }
 
 @media all and (min-width: 18.75em) {
-  .findus__openhour__large-grid {
+  .openhour__large-grid {
     display: grid;
     grid-template-rows: repeat(7, 1fr);
     grid-template-columns: repeat(2, auto);
