--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -3,24 +3,24 @@
 
 // carousel
 /* Caption text */
-.small-menu__carousel__image-description {
+.carousel__image-description {
     background-color: $brown-7;
     color: $yellow-2;
     border-top: 1px solid $brown-7;
 }
 
 //Next & previous buttons
-.small-menu__carousel__button--prev,
-.small-menu__carousel__button--next {
+.carousel__button--prev,
+.carousel__button--next {
     color: $brown-2;
 }
 
-.small-menu__carousel-dot {
+.carousel__dot {
     background-color: $orange-4;
 }
 
-.small-menu__carousel-dot:hover,
-.small-menu__carousel-dot.current-dot {
+.carousel__dot:hover,
+.carousel__dot.current-dot {
     background-color: $brown-4;
 }
 
@@ -90,7 +90,7 @@ select.valid {
     color: $red-1;
 }
 
-.reservation__form__submit-button {
+.reservation__submit-button {
     background-color: $brown-1;
     color: $yellow-2;
     box-shadow: 1px 1px 1px $brown-6;
@@ -105,40 +105,40 @@ select.valid {
 }
 
 // confirmation message
-.reservation__confirmation-message__container {
+.confirmation-message__container {
     background-color: $grey-6a;
 }
 
-.reservation__confirmation-message__content {
+.confirmation-message__content {
     background-color: $white-1;
     box-shadow: 0px 0px 3px $grey-5;
 }
 
-.reservation__confirmation-message__container header {
+.confirmation-message__container header {
     background-color: $yellow-2;
     color: $black-1;
 }
 
-.reservation__confirmation-message__close-button {
+.confirmation-message__close-button {
 
     &:focus {
         outline: 2px solid $orange-2;
     }
 }
 
-.reservation__confirmation-message__bottom-button--confirm {
+.confirmation-message__bottom-button--confirm {
     background-color: $brown-1;
     color: $yellow-2;
 }
 
-.reservation__confirmation-message__bottom-button--cancel {
+.confirmation-message__bottom-button--cancel {
     background-color: $grey-2;
     color: $black-1;
 }
 
 // findus
-.findus__contact__container h2,
-.findus__openhour__container h3 {
+.contact__container h2,
+.openhour__container h3 {
     border-bottom: 4px dotted $grey-2;
 }
 
