--- a/src/styles/scss-non-critical/sections/reservation-form/_form-structure.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-structure.scss
@@ -39,62 +39,62 @@
 
 // grid of inputs and textarea
 @include min-mq (sm) {
-    .reservation__form__name {
+    .reservation__name {
         grid-area: 1 / 1 / 2 / 2;
     }
 
-    .reservation__form__phone {
+    .reservation__phone {
         grid-area: 1 / 2 / 2 / 3;
     }
 
-    .reservation__form__email {
+    .reservation__email {
         grid-area: 2 / 1 / 3 / 2;
     }
 
-    .reservation__form__guest-number {
+    .reservation__guest-number {
         grid-area: 2 / 2 / 3 / 3;
     }
 
-    .reservation__form__date {
+    .reservation__date {
         grid-area: 3 / 1 / 4 / 2;
     }
 
-    .reservation__form__time {
+    .reservation__time {
         grid-area: 3 / 2 / 4 / 3;
     }
 
-    .reservation__form__optional-message {
+    .reservation__optional-message {
         grid-area: 4 / 1 / 5 / 3;
     }
 
-    .reservation__form__bottom-part {
+    .reservation__bottom-part {
         grid-area: 5 / 1 / 6 / 3;
     }
 }
 
 // between lg and xl, showing 3 columns
 @include between-mq (lg, xl) {
-    .reservation__form__email {
+    .r-form__email {
         grid-area: 1 / 3 / 2 / 4;
     }
 
-    .reservation__form__guest-number {
+    .reservation__guest-number {
         grid-area: 2 / 1 / 3 / 2;
     }
 
-    .reservation__form__date {
+    .reservation__date {
         grid-area: 2 / 2 / 3 / 3;
     }
 
-    .reservation__form__time {
+    .reservation__time {
         grid-area: 2 / 3 / 3 / 4;
     }
 
-    .reservation__form__optional-message {
+    .reservation__optional-message {
         grid-area: 3 / 1 / 5 / 4;
     }
 
-    .reservation__form__bottom-part {
+    .reservation__bottom-part {
         grid-area: 5 / 1 / 6 / 4;
     }
 }
