--- a/src/styles/scss-non-critical/sections/menus/_sm-menu-carousel.scss
+++ b/src/styles/scss-non-critical/sections/menus/_sm-menu-carousel.scss
@@ -126,7 +126,6 @@
     padding: 0;
     // padding-top: 1rem;
     // width: 0.75rem;
-    // transition: background-color 0.6s ease;
 }
 
 .carousel__progress-container.current-container {
@@ -138,9 +137,9 @@
     width: 100%;
     display: block;
     border: none;
-    border-radius: 5px solid lightgreen;
-    background-color: lightgreen;
-    // transition: background-color 0.6s ease;
+    border-radius: 0.75rem;
+    background-color: rgb(252, 222, 185);
+    overflow: hidden;
 }
 
 .carousel__progress-bar {
@@ -149,8 +148,7 @@
     padding: 0;
     height: 0.75rem;
     width: 0.75rem;
-    // width: 3.5rem;
-    // transition: background-color 0.6s ease;
+    background-color: rgb(252, 222, 185);
     border-radius: 100%;
     border: none;
 }
@@ -160,8 +158,11 @@
     margin: 0;
     padding: 0;
     width: 1%;
-    // width:100%;
     padding: 0;
-    border-radius: 5px solid red;
-    background-color: red;
+    border-radius: 0.75px;
+    background-color: rgb(195, 129, 84);
+}
+
+.carousel__progress-bar.finished-bar {
+    background-color: rgb(195, 129, 84);
 }
