--- a/src/styles/scss-critical/sections/menus/_menu-panels.scss
+++ b/src/styles/scss-critical/sections/menus/_menu-panels.scss
@@ -26,22 +26,23 @@
 }
 
 /* menu description */
-.menu__panel .menu__item-name {
-    padding: 2%;
-    padding-left: calc(0.5rem + 1vw);
-    display: inline-block;
-}
-
 .menu__item {
     display: grid;
     align-content: center;
     min-height: f.rem(125);
 }
 
-.menu__item p {
+.menu__item-name {
+    padding: 2%;
+    padding-left: calc(0.5rem + 1vw);
+    display: inline-block;
+}
+
+.menu__item p:not(.menu__item-name) {
     margin: 0;
     padding: 2%;
     padding-left: calc(0.5rem + 1vw);
+    padding-top: 0;
 }
 
 .menu__item-price {
@@ -73,6 +74,10 @@
         grid-template-rows: repeat(3, 1fr);
         column-gap: 0px;
         row-gap: 0px;
+    }
+
+    .menu__item p:not(.menu__item-name) {
+        padding-top: 1%;
     }
 
     .menu__item--1 {
